@@ -30,6 +30,8 @@ version ? (????-??-??):
   - tariffs: increased max rate limit to 100000 (alec) 
   - hosting: added aliases list in account info (alec)
   - hosting: allow only lowercase in logins/domains (alec)
+  - fixed download and upload units - we use SI units from now (chilan)
+  - optimized compacting traffic data (chilan)
 
 version 1.11.2 Neera (2008-01-23):
 
